--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -1,4 +1,4 @@
-name: CI Build
+name: CI-build
 on:
   push:
     branches:
@@ -25,10 +25,9 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/chekout@v2
 
       - name: Install dependencies
         run: |
@@ -40,7 +39,7 @@ jobs:
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
 
-      - name: Run unit tests with nose
-        run: nosetests
+      - name: Run unittest with Nose
+        run: "nosetests -v --with-spec --spec-color --with-coverage --cover-package=service"
         env:
           DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
