--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     container: python:3.9-slim
 
     services:
@@ -27,7 +27,7 @@ jobs:
           --health-retries 5
     steps:
       - name: Checkout
-        uses: actions/chekout@v2
+        uses: actions/checkout@v2
 
       - name: Install dependencies
         run: |
