--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -19,6 +19,7 @@ spec:
     spec:
       containers:
       - image: us.icr.io/sn-labs-larryzhuang/accounts:1
+        imagePullPolicy: Always
         name: accouts
         resources: {}
         env:
