--- a/tekton/tasks.yaml
+++ b/tekton/tasks.yaml
@@ -49,4 +49,35 @@ spec:
           # Delete files and directories starting with .. plus any other character
           rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
         fi
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: nose
+spec:
+  description: This task will run nosetests 
+  workspaces:
+    - name: source
+  params:
+    - name: args
+      description: options for nosetests
+      type: string
+      default: "-v"
+    - name: database_uri
+      description: database URI to pass into the test
+      type: string
+      default: "sqlite:///test.db"
+  steps:
+    - name: nosetests
+      image: python:3.9-slim
+      workingDir: $(workspaces.source.path) 
+      env:
+        - name: DATABASE_URI
+          value: $(params.database_uri)
+      script: |
+        #!/bin/bash
+        set -e
+        python -m pip install --upgrade pip wheel
+        pip install -qr requirements.txt
+        nosetests $(params.args)
 
